fixed css spacing for player

--- a/src/pages/Home/home.css
+++ b/src/pages/Home/home.css
@@ -258,7 +258,8 @@ input[type="file"] {
     margin-bottom: 0.5em;
 }
 
-img {
+.portrait-img {
+    display: none;
     max-width: 300px;
 }
 
